changed password and added secrets

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-	"DefaultConnection": "Server=tcp:emails.database.windows.net,1433;Initial Catalog=emaildb;Persist Security Info=False;User ID=CloudSA2e1ddd34;Password=VDP@$$word01,;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+	"DefaultConnection": "Server=tcp:emails.database.windows.net,1433;Initial Catalog=emaildb;Persist Security Info=False;User ID=CloudSA2e1ddd34;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
